--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="10">
     <tr>
       <td>
-        <img src="C:\Users\galan\Desktop\Web DevelopmentBootcamp\Web Development\HTML - Personal Site\profile_pic.jpg" alt="gilbert's profile picture"></img>
+        <img src="https://github.com/WakeTheNoble/cv/blob/main/profile_pic.jpg" alt="gilbert's profile picture"></img>
       </td>
       <td>
         <h1>Gilbert Rodriguez</h1>
