--- a/index.html
+++ b/index.html
@@ -2,90 +2,197 @@
 <html lang="en" dir="ltr">
 
 <head>
+  <title>80's Nostalgia</title>
+  <!-- Required meta tags -->
   <meta charset="utf-8">
-  <title>Gilbert's Personal Site</title>
+  <link rel="stylesheet" href="style.css">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+  <!-- JavaScript/JQuery-->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+  <!-- Google Fonts-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Orelega+One&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
+
+  <!-- Font Awesome-->
+  <link href="C:\Users\galan\Desktop\WEBDESIGN\NewPortfolioWebsite\assets\fontawesome-free-6.1.1-web\css\all.css" rel="stylesheet">
 </head>
 
 <body>
-  <table cellspacing="10">
-    <tr>
-      <td>
-        <img src="https://raw.githubusercontent.com/WakeTheNoble/cv/main/profile_pic.jpg" alt="gilbert's profile picture"></img>
-      </td>
-      <td>
-        <h1>Gilbert Rodriguez</h1>
-        <p><em>web developer </em></p>
-        <p>Studying to become a Web Developer.</p>
-      </td>
-    </tr>
-  </table>
-  <hr>
-  <h3>Education</h3>
-  <li><a href="https://www.glendale.edu/academics/degree-certificate-programs/certificate-programs/web-development">Web Development Certification</a> from Glendale Community College</li>
-  <ul style="list-style-type:circle">
-    <li><em>This degree or certificate is designed for both the IT professional and
-        the college student seeking a thorough preparation for the field of Web development.
-        Course work includes Internet technologies, Web graphic design skills, programming
-        and scripting for the Web. Students must complete all required courses for a minimum
-        of 24 units. Program Learning Outcomes: Upon successful completion of this program,
-        the student will be able to use industry standard tools and techniques to produce,
-        publish and maintain Websites and Web content. A major skill-building project
-        spanning three semesters is included in the course work.</em></li>
-  </ul>
-  <li><a href="https://www.codecademy.com/profiles/digitalPlayer67039/certificates/705dcb15de0da4dd9d9fc4f3274b430e">Certificate of Completion</a> in the Learn JavaScript Course at Codecademy</li>
-  <ul style="list-style-type:circle">
-    <li><em>Learn the JavaScript fundamentals you’ll need for front-end or back-end development.</em></li>
-  </ul>
-  <h3>Work Experience</h3>
-  <hr>
-  <table cellspacing="10">
-    <thead>
-      <tr>
-        <th>Dates</th>
-        <th>Work</th>
-      </tr>
-    </thead>
-    <tbody>
-      <td>
-        2016-2020
-      </td>
-      <td>
-        Delivery Driver at Redline Delivery Services
-      </td>
-      <tr>
-        <td>
-          2011-2016
-        </td>
-        <td>
-          Ambulance Driver at Firstmed Ambulance
-        </td>
-      </tr>
-      <tr>
-        <td>
-          2006
-        </td>
-        <td>
-          Head Office Support Staff at Cappello & Noel Law Firm
-        </td>
-      </tr>
-    </tbody>
-    <tfoot>
-    </tfoot>
-    <table>
-      <h3>Skills</h3>
-      <hr>
-      <table cellspacing="10">
-        <tr>
-          <td>HTML ⭐⭐⭐⭐⭐</td>
-          <td>CSS ⭐⭐⭐⭐⭐</td>
-        </tr>
-        <tr>
-          <td>JavaScript ⭐⭐⭐⭐⭐</td>
-          <td> JAVA ⭐⭐⭐⭐⭐</td>
-        </tr>
-      </table>
-      <hr>
-      <h4><a href="hobbies.html">Hobbies</a></h4>
-      <h4><a href="contact.html">Contact Me</a></h4>
+  <!-- title -->
+  <section id="title">
+    <div class="container-fluid">
+
+      <!-- Navbar -->
+      <section id="navbar">
+        <div class="pos-f-t">
+          <div class="collapse" id="navbarToggleExternalContent">
+            <div class="bg-dark p-4">
+              <h4 class="text-white">80's Nostalgia</h4>
+              <span class="text-muted">A layout by Alan Rodriguez.</span>
+            </div>
+          </div>
+          <nav class="navbar navbar-dark">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          </nav>
+        </div>
+      </section>
+
+      <!--header(actually just stripes for background theme)-->
+
+      <div class="header">
+        <div class="bar1">
+        </div>
+        <div class="bar2">
+        </div>
+        <div class="bar3">
+        </div>
+        <div class="bar4">
+        </div>
+      </div>
+
+      <!-- secondary nav -->
+      <div class="row">
+        <div class="col container-fluid">
+          <ul class="nav">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Active</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#">Disabled</a>
+            </li>
+          </ul>
+
+
+          <!-- Big Title-->
+
+          <div class="row">
+            <div class="col-sm">
+              <h1>A Big Title</h1>
+              <h3>Talent Coordinator - Web Design Student</h3>
+              <h5>Los Angeles, California, United States</h5>
+              <br />
+              <button type="button" class="btn btn-warning btn-lg"><i class="fa fa-linkedin-square" aria-hidden="true"><i class="fa fa-envelope" aria-hidden="true"></i></i></button>
+              <button type="button" class="btn btn-outline-secondary btn-lg"><i class="fa fa-download" aria-hidden="true">
+                </i></button>
+            </div>
+            <!-- Logo image-->
+
+            <div class="row">
+              <div class="col-sm">
+                <section id="Logo">
+                  <i class="fa-solid fa-computer fa-10x"></i>
+              </div>
+  </section>
+  </div>
+
+
+  </div>
+  </section>
+  <!-- end of title-->
+
+
+  <section id="mission">
+    <div class="row">
+      <div class="col-sm">
+        <image src="assets\profile_pic.png"></image>
+      </div>
+      <div class="col-sm">
+        <i class="fa-solid fa-cog fa-spin"></i>
+        <i class="fa-solid fa-cog fa-spin"></i>
+        <i class="fa-solid fa-cog fa-spin"></i>
+        <i class="fa-solid fa-cog fa-spin"></i>
+        <i class="fa-solid fa-cog fa-spin"></i>
+        <h2>Mission Statement:</h2>
+        <h8>I'm seeking a career change, I've worked in medicine, retail, film, sales and in an office setting. Now I would like to explore technology and the internet. I've learned how to code and really fell in love with the power of the internet
+          and
+          technology and now I feel the need to be apart of it. Although I don't have many years of experience working in this industry, I've been a technology nerd all my life, ever since I was able to play on my cousins Apple II computer. Since
+          then
+          I've been attached to the screen and I'm all about tech.
+        </h8>
+      </div>
+    </div>
+    <br></br>
+  </section>
+  <!-- Education -->
+  <section id="Education">
+    <i class="fa-solid fa-cog fa-spin"></i>
+    <i class="fa-solid fa-cog fa-spin"></i>
+    <i class="fa-solid fa-cog fa-spin"></i>
+    <i class="fa-solid fa-cog fa-spin"></i>
+    <i class="fa-solid fa-cog fa-spin"></i>
+    <div class="row">
+      <div class="col-sm">
+        <h2>Education</h2>
+        <h8>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus varius elit lacus, nec semper urna vehicula eget. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed suscipit efficitur
+          dolor,eu tristique nisl mollis in. Nulla et condimentum metus. Sed in maximus neque. Morbi non tincidunt risus. Integer ut tellus eget odio faucibus maximus. Nulla a sodales turpis. Pellentesque quis lobortis diam, ut finibus leo. Quisque
+          interdum ligula nec fermentum varius. Etiam quam sapien, volutpat nec urna vel, fringilla fringilla risus. Aliquam ut risus quis mauris posuere placerat auctor sit amet dolor. Integer magna ex, aliquet vel enim ac, lobortis hendrerit
+          nisl.Fusce convallis laoreet vulputate. Integer euismod metus enim, pharetra elementum est tincidunt laoreet. Maecenas nec nulla ac sapien lacinia dictum. Aliquam venenatis lobortis justo, vestibulum scelerisque justo maximus vitae.
+          Mauris laoreet diam nec tellus malesuada, id interdum eros dapibus. Ut tincidunt augue a orci aliquet, quis tincidunt leo consequat. Pellentesque id lacus in libero accumsan pulvinar. Donec ullamcorper sagittis quam, nec posuere felis
+          tincidunt quis. Fusce purus dolor, mattis vel lacus et, ultricies eleifend justo. Etiam vitae egestas mauris. In molestie sapien eu lobortis accumsan. Cras eu felis vel tortor consectetur imperdiet lobortis sed purus. Lorem ipsum dolor
+          sit amet, consectetur adipiscing elit. Nullam accumsan nisl erat, ac congue ligula cursus sed. Integer cursus justo eu eros laoreet, vel pellentesque nunc cursus. Aliquam quis nisi at est blandit venenatis.
+        </h8>
+      </div>
+      <div class="col-sm">
+        <image src="C:\Users\galan\Desktop\WEBDESIGN\NewPortfolioWebsite\assets\glendale.gif"></image>
+      </div>
+    </div>
+    <br></br>
+  </section>
+  <!-- end of education -->
+  <!-- Work Experience-->
+  <section id="WorkExperience">
+    <div class="row">
+      <div class="col-sm">
+        <image src="assets\aclima.png"></image>
+      </div>
+      <div class="col-sm">
+        <i class="fa-solid fa-cog fa-spin"></i>
+        <i class="fa-solid fa-cog fa-spin"></i>
+        <i class="fa-solid fa-cog fa-spin"></i>
+        <i class="fa-solid fa-cog fa-spin"></i>
+        <i class="fa-solid fa-cog fa-spin"></i>
+        <h2>Work Experience:</h2>
+        <h8>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus varius elit lacus, nec semper urna vehicula eget. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed suscipit efficitur
+          dolor,eu tristique nisl mollis in. Nulla et condimentum metus. Sed in maximus neque. Morbi non tincidunt risus. Integer ut tellus eget odio faucibus maximus. Nulla a sodales turpis. Pellentesque quis lobortis diam, ut finibus leo. Quisque
+          interdum ligula nec fermentum varius. Etiam quam sapien, volutpat nec urna vel, fringilla fringilla risus. Aliquam ut risus quis mauris posuere placerat auctor sit amet dolor. Integer magna ex, aliquet vel enim ac, lobortis hendrerit
+          nisl.Fusce convallis laoreet vulputate. Integer euismod metus enim, pharetra elementum est tincidunt laoreet. Maecenas nec nulla ac sapien lacinia dictum. Aliquam venenatis lobortis justo, vestibulum scelerisque justo maximus vitae.
+          Mauris laoreet diam nec tellus malesuada, id interdum eros dapibus. Ut tincidunt augue a orci aliquet, quis tincidunt leo consequat. Pellentesque id lacus in libero accumsan pulvinar. Donec ullamcorper sagittis quam, nec posuere felis
+          tincidunt quis. Fusce purus dolor, mattis vel lacus et, ultricies eleifend justo. Etiam vitae egestas mauris. In molestie sapien eu lobortis accumsan. Cras eu felis vel tortor consectetur imperdiet lobortis sed purus. Lorem ipsum dolor
+          sit amet, consectetur adipiscing elit. Nullam accumsan nisl erat, ac congue ligula cursus sed. Integer cursus justo eu eros laoreet, vel pellentesque nunc cursus. Aliquam quis nisi at est blandit venenatis.
+        </h8>
+      </div>
+    </div>
+    <br></br>
+  </section>
 </body>
-</html>
+<section id="footer">
+  <footer>
+    <div class="row">
+      <div class="col-sm">
+        <h6>This is a project for Web Development</h6>
+        <i class="fa-brands fa-facebook fa-lg"></i>
+        <i class="fa-brands fa-instagram fa-lg"></i>
+        <i class="fa-brands fa-twitter fa-lg"></i>
+        <i class="fa-solid fa-envelope fa-lg"></i>
+      </div>
+    </div>
+    <h4>Alan Rodriguez</h4>
+    <h6>&#169 Copyright 2022</h6>
+  </footer>
+</section>
