--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
 
   <!-- Font Awesome-->
-  <link href="C:\Users\galan\Desktop\WEBDESIGN\NewPortfolioWebsite\assets\fontawesome-free-6.1.1-web\css\all.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
 </head>
 
 <body>
