--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   <section id="mission">
     <div class="row">
       <div class="col-sm">
-        <image src="assets\profile_pic.png"></image>
+        <image src=".\assets\profile_pic.png"></image>
       </div>
       <div class="col-sm">
         <i class="fa-solid fa-cog fa-spin"></i>
@@ -149,7 +149,7 @@
         </h8>
       </div>
       <div class="col-sm">
-        <image src="C:\Users\galan\Desktop\WEBDESIGN\NewPortfolioWebsite\assets\glendale.gif"></image>
+        <image src=".\assets\glendale.gif"></image>
       </div>
     </div>
     <br></br>
@@ -159,7 +159,7 @@
   <section id="WorkExperience">
     <div class="row">
       <div class="col-sm">
-        <image src="assets\aclima.png"></image>
+        <image src=".\assets\aclima.png"></image>
       </div>
       <div class="col-sm">
         <i class="fa-solid fa-cog fa-spin"></i>
