--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   <section id="mission">
     <div class="row">
       <div class="col-sm">
-        <image src="cv/profile_pic.png"></image>
+        <image src="profile_pic.png"></image>
       </div>
       <div class="col-sm">
         <i class="fa-solid fa-cog fa-spin"></i>
@@ -149,7 +149,7 @@
         </h8>
       </div>
       <div class="col-sm">
-        <image src="cv/glendale.gif"></image>
+        <image src="glendale.gif"></image>
       </div>
     </div>
     <br></br>
@@ -159,7 +159,7 @@
   <section id="WorkExperience">
     <div class="row">
       <div class="col-sm">
-        <image src="cv/aclima.png"></image>
+        <image src="aclima.png"></image>
       </div>
       <div class="col-sm">
         <i class="fa-solid fa-cog fa-spin"></i>
