--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <title>80's Nostalgia</title>
+  <title>Web Dev Portfolio | 80's Nostalgia Themed</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
@@ -22,7 +22,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
 
   <!-- Font Awesome-->
-  <link href="C:\Users\galan\Desktop\WEBDESIGN\NewPortfolioWebsite\assets\fontawesome-free-6.1.1-web\css\all.css" rel="stylesheet"> 
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
 
 </head>
@@ -37,8 +36,8 @@
         <div class="pos-f-t">
           <div class="collapse" id="navbarToggleExternalContent">
             <div class="bg-dark p-4">
-              <h4 class="text-white">80's Nostalgia</h4>
-              <span class="text-muted">A layout by Alan Rodriguez.</span>
+              <h4 class="text-white">80's Nostalgia Theme</h4>
+              <span class="text-muted">Thank you for taking the time to check out my web dev portfolio, at the bottom of the page you can find my resume and contact info.</span>
             </div>
           </div>
           <nav class="navbar navbar-dark">
@@ -48,9 +47,7 @@
           </nav>
         </div>
       </section>
-
       <!--header(actually just stripes for background theme)-->
-
       <div class="header">
         <div class="bar1">
         </div>
@@ -61,7 +58,6 @@
         <div class="bar4">
         </div>
       </div>
-
       <!-- secondary nav -->
       <div class="row">
         <div class="col container-fluid">
@@ -79,22 +75,19 @@
               <a class="nav-link disabled" href="#">Disabled</a>
             </li>
           </ul>
-
-
           <!-- Big Title-->
-
           <div class="row">
             <div class="col-sm">
-              <h1>A Big Title</h1>
+              
+        <!--<image src="C:\Users\galan\Desktop\WEBDESIGN\NewPortfolioWebsite\assets\profile_pic.png"></image> -->
+        <!-- online only -->
+         <image src="profile_pic.png"></image> -->
+              <h1>Alan Rodriguez</h1>
               <h3>Talent Coordinator - Web Design Student</h3>
               <h5>Los Angeles, California, United States</h5>
               <br />
-              <button type="button" class="btn btn-warning btn-lg"><i class="fa fa-linkedin-square" aria-hidden="true"><i class="fa fa-envelope" aria-hidden="true"></i></i></button>
-              <button type="button" class="btn btn-outline-secondary btn-lg"><i class="fa fa-download" aria-hidden="true">
-                </i></button>
             </div>
             <!-- Logo image-->
-
             <div class="row">
               <div class="col-sm">
                 <section id="Logo">
@@ -102,87 +95,92 @@
               </div>
   </section>
   </div>
-
-
   </div>
   </section>
   <!-- end of title-->
 
-
+  <section id="thumbnail">
+    <h2>Examples</h2>
+    <button class="btn">
+    <div class="card" style="width: 12rem;">
+      <img src="tindog-thumb.png" class="card-img-top" alt="..."></image>
+      <!-- <img src="C:\Users\galan\Desktop\WEBDESIGN\NewPortfolioWebsite\assets\tindog-thumb.png" class="card-img-top" alt="..."> -->
+      <div class="card-body">
+      </div>
+    </div>
+  </button>
+  </section>
   <section id="mission">
     <div class="row">
       <div class="col-sm">
-        <image src="profile_pic.png"></image>
+        <h2>Mission</h2>
       </div>
       <div class="col-sm">
-        <i class="fa-solid fa-cog fa-spin"></i>
-        <i class="fa-solid fa-cog fa-spin"></i>
-        <i class="fa-solid fa-cog fa-spin"></i>
-        <i class="fa-solid fa-cog fa-spin"></i>
-        <i class="fa-solid fa-cog fa-spin"></i>
-        <h2>Mission Statement:</h2>
-        <h8>I'm seeking a career change, I've worked in medicine, retail, film, sales and in an office setting. Now I would like to explore technology and the internet. I've learned how to code and really fell in love with the power of the internet
-          and
-          technology and now I feel the need to be apart of it. Although I don't have many years of experience working in this industry, I've been a technology nerd all my life, ever since I was able to play on my cousins Apple II computer. Since
-          then
-          I've been attached to the screen and I'm all about tech.
+        <h8>I've always loved tech and the web. I've been able to play a role in Aclima as a talent coordinator, helping build up the organization, but in the future I would like to be more involved in web development.
         </h8>
       </div>
     </div>
     <br></br>
   </section>
-  <!-- Education -->
-  <section id="Education">
-    <i class="fa-solid fa-cog fa-spin"></i>
-    <i class="fa-solid fa-cog fa-spin"></i>
-    <i class="fa-solid fa-cog fa-spin"></i>
-    <i class="fa-solid fa-cog fa-spin"></i>
-    <i class="fa-solid fa-cog fa-spin"></i>
-    <div class="row">
-      <div class="col-sm">
-        <h2>Education</h2>
-        <h8>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus varius elit lacus, nec semper urna vehicula eget. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed suscipit efficitur
-          dolor,eu tristique nisl mollis in. Nulla et condimentum metus. Sed in maximus neque. Morbi non tincidunt risus. Integer ut tellus eget odio faucibus maximus. Nulla a sodales turpis. Pellentesque quis lobortis diam, ut finibus leo. Quisque
-          interdum ligula nec fermentum varius. Etiam quam sapien, volutpat nec urna vel, fringilla fringilla risus. Aliquam ut risus quis mauris posuere placerat auctor sit amet dolor. Integer magna ex, aliquet vel enim ac, lobortis hendrerit
-          nisl.Fusce convallis laoreet vulputate. Integer euismod metus enim, pharetra elementum est tincidunt laoreet. Maecenas nec nulla ac sapien lacinia dictum. Aliquam venenatis lobortis justo, vestibulum scelerisque justo maximus vitae.
-          Mauris laoreet diam nec tellus malesuada, id interdum eros dapibus. Ut tincidunt augue a orci aliquet, quis tincidunt leo consequat. Pellentesque id lacus in libero accumsan pulvinar. Donec ullamcorper sagittis quam, nec posuere felis
-          tincidunt quis. Fusce purus dolor, mattis vel lacus et, ultricies eleifend justo. Etiam vitae egestas mauris. In molestie sapien eu lobortis accumsan. Cras eu felis vel tortor consectetur imperdiet lobortis sed purus. Lorem ipsum dolor
-          sit amet, consectetur adipiscing elit. Nullam accumsan nisl erat, ac congue ligula cursus sed. Integer cursus justo eu eros laoreet, vel pellentesque nunc cursus. Aliquam quis nisi at est blandit venenatis.
-        </h8>
-      </div>
-      <div class="col-sm">
-        <image src="glendale.gif"></image>
-      </div>
-    </div>
-    <br></br>
-  </section>
-  <!-- end of education -->
+
   <!-- Work Experience-->
   <section id="WorkExperience">
     <div class="row">
       <div class="col-sm">
+        <!-- code for online only -->
         <image src="aclima.png"></image>
+        <!-- <image src="C:\Users\galan\Desktop\WEBDESIGN\NewPortfolioWebsite\assets\aclima.png"></image> -->
       </div>
       <div class="col-sm">
-        <i class="fa-solid fa-cog fa-spin"></i>
-        <i class="fa-solid fa-cog fa-spin"></i>
-        <i class="fa-solid fa-cog fa-spin"></i>
-        <i class="fa-solid fa-cog fa-spin"></i>
-        <i class="fa-solid fa-cog fa-spin"></i>
-        <h2>Work Experience:</h2>
-        <h8>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus varius elit lacus, nec semper urna vehicula eget. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed suscipit efficitur
-          dolor,eu tristique nisl mollis in. Nulla et condimentum metus. Sed in maximus neque. Morbi non tincidunt risus. Integer ut tellus eget odio faucibus maximus. Nulla a sodales turpis. Pellentesque quis lobortis diam, ut finibus leo. Quisque
-          interdum ligula nec fermentum varius. Etiam quam sapien, volutpat nec urna vel, fringilla fringilla risus. Aliquam ut risus quis mauris posuere placerat auctor sit amet dolor. Integer magna ex, aliquet vel enim ac, lobortis hendrerit
-          nisl.Fusce convallis laoreet vulputate. Integer euismod metus enim, pharetra elementum est tincidunt laoreet. Maecenas nec nulla ac sapien lacinia dictum. Aliquam venenatis lobortis justo, vestibulum scelerisque justo maximus vitae.
-          Mauris laoreet diam nec tellus malesuada, id interdum eros dapibus. Ut tincidunt augue a orci aliquet, quis tincidunt leo consequat. Pellentesque id lacus in libero accumsan pulvinar. Donec ullamcorper sagittis quam, nec posuere felis
-          tincidunt quis. Fusce purus dolor, mattis vel lacus et, ultricies eleifend justo. Etiam vitae egestas mauris. In molestie sapien eu lobortis accumsan. Cras eu felis vel tortor consectetur imperdiet lobortis sed purus. Lorem ipsum dolor
-          sit amet, consectetur adipiscing elit. Nullam accumsan nisl erat, ac congue ligula cursus sed. Integer cursus justo eu eros laoreet, vel pellentesque nunc cursus. Aliquam quis nisi at est blandit venenatis.
-        </h8>
+        <h2>Work Experience</h2>
+        <h5>Talent Coordinator - Aclima (2021 July - Present)</h5>
+        <h8>Started off as a driver with Aclima, then I was promoted to talent coordinator whos duties included contacting and interviewing potential candidates, coordinating with management and vetting.</h8>
       </div>
     </div>
     <br></br>
   </section>
 </body>
+
+<!-- Education -->
+<section id="Education">
+  <div class="row">
+    <div class="col-sm">
+      <h2>Education</h2>
+      <h8>Web Development A.S 2022 - Glendale Community College</h8>
+      </h8>
+    </div>
+    <div class="col-sm">
+      <!-- code for online only  -->
+      <image src="glendale.gif"></image>
+     <!-- <image src="C:\Users\galan\Desktop\WEBDESIGN\NewPortfolioWebsite\assets\glendale.gif"></image> -->
+    </div>
+  </div>
+  <br></br>
+</section>
+<!-- end of education -->
+
+<!-- Skills -->
+<section id="Skills">
+  <div>
+    <h2>Skills</h2>
+    <h5>Html CSS Boostrap Java Javascript JQuery PHP MYSQL Unix/Linux OS</h5>
+  </div>
+</section>
+<!-- end of skills-->
+
+
+
+<!-- Call to action -->
+<section id="Action">
+  <!-- Auto width -->
+  <h6>Thank you for taking the time to read this webpage, have a nice day. Please feel free to contanct me for any business inquiries. </h6>
+</div>
+<button class="btn-primary"><i class="fa fa-phone fa-2x"></i> Contact</button>
+<button class="btn-secondary"><i class="fa fa-file-text fa-2x"></i> Resume</button>
+</section>
+<!-- call to action end -->
+
+<!-- footer -->
 <section id="footer">
   <footer>
     <div class="row">
@@ -198,3 +196,4 @@
     <h6>&#169 Copyright 2022</h6>
   </footer>
 </section>
+<!-- end of footer-->
