--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               
         <!--<image src="C:\Users\galan\Desktop\WEBDESIGN\NewPortfolioWebsite\assets\profile_pic.png"></image> -->
         <!-- online only -->
-         <image src="profile_pic.png"></image> -->
+         <image src="profile_pic.png"></image>
               <h1>Alan Rodriguez</h1>
               <h3>Talent Coordinator - Web Design Student</h3>
               <h5>Los Angeles, California, United States</h5>
